Prevent label from overflowing on caret icon
Closes #19204

Insipiration @jawlensky

--- a/wiki/src/doc/about/warnings.css
+++ b/wiki/src/doc/about/warnings.css
@@ -30,6 +30,7 @@
   background: var(--medium-light-green) url(../../lib/go-down.png) no-repeat right 8px center !important;
   box-shadow: 1px 1px 1px var(--medium-dark-gray), 2px 2px 10px var(--light-gray), inset 2px 2px 2px var(--background-green);
   text-align: center;
+  padding-right: 32px !important;
 }
 
 #columns .button:hover {
